--- a/proiect_final/proiect_final.vcxproj
+++ b/proiect_final/proiect_final.vcxproj
@@ -128,23 +128,36 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="..\src\Bacteria.cpp" />
-    <ClCompile Include="..\src\Cell.cpp" />
-    <ClCompile Include="..\src\ImmuneCell.cpp" />
-    <ClCompile Include="..\src\main.cpp" />
-    <ClCompile Include="..\src\MuscleCell.cpp" />
-    <ClCompile Include="..\src\NerveCell.cpp" />
-    <ClCompile Include="..\src\Pathogen.cpp" />
-    <ClCompile Include="..\src\Virus.cpp" />
+    <ClCompile Include="..\src\bacteria.cpp" />
+    <ClCompile Include="..\src\cell.cpp" />
+    <ClCompile Include="..\src\immune_cell.cpp" />
+    <ClCompile Include="..\src\logger.cpp" />
+    <ClCompile Include="..\src\main.cpp">
+      <AdditionalIncludeDirectories Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">C:\Users\alexa\source\repos\proiect_final\include</AdditionalIncludeDirectories>
+    </ClCompile>
+    <ClCompile Include="..\src\mitochondria.cpp" />
+    <ClCompile Include="..\src\muscle_cell.cpp" />
+    <ClCompile Include="..\src\muscle_tissue.cpp" />
+    <ClCompile Include="..\src\nerve_cell.cpp" />
+    <ClCompile Include="..\src\pathogen.cpp" />
+    <ClCompile Include="..\src\tissue.cpp" />
+    <ClCompile Include="..\src\virus.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="..\include\Bacteria.h" />
-    <ClInclude Include="..\include\Cell.h" />
-    <ClInclude Include="..\include\ImmuneCell.h" />
-    <ClInclude Include="..\include\MuscleCell.h" />
-    <ClInclude Include="..\include\NerveCell.h" />
-    <ClInclude Include="..\include\Pathogen.h" />
-    <ClInclude Include="..\include\Virus.h" />
+    <ClInclude Include="..\include\bacteria.h" />
+    <ClInclude Include="..\include\cell.h" />
+    <ClInclude Include="..\include\immune_cell.h" />
+    <ClInclude Include="..\include\logger.h" />
+    <ClInclude Include="..\include\mitochondria.h" />
+    <ClInclude Include="..\include\muscle_cell.h" />
+    <ClInclude Include="..\include\muscle_tissue.h" />
+    <ClInclude Include="..\include\nerve_cell.h" />
+    <ClInclude Include="..\include\pathogen.h" />
+    <ClInclude Include="..\include\tissue.h" />
+    <ClInclude Include="..\include\virus.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <Text Include="log.txt" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
